change design button and search

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <img src="media/logo.png" alt="logo" width="300px">
     <div class="section1">
         <input type="text" id="nameInput" placeholder="Enter your name">
-        <button id="startButton">Start Game</button>
+        <button id="startButton" class="custom-btn">Start Game</button>
     </div>
     <div class="section2">
         <div id="score">Score: 0</div>
